@@ -1113,13 +1113,6 @@ specified after table_body and inside a list."));
 }
 
 
-/* Access to ui_out format private members.  */
-
-void
-ui_out_get_field_separator (struct ui_out *uiout)
-{
-}
-
 /* Access to ui-out members data.  */
 
 void *
